fix footer on mobile

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -159,9 +159,6 @@ h1.head
 .errors
 	padding: 5px
 
-.text-right
-	float: right
-
 .partners h1
 	text-align: center
 	padding: 20px
